# MedicBridges

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  connection-strings.txt  docker-compose.yml  requirements.txt
api/: __init__.py  config.py  deps.py  errors.py  geo.py  main.py  pagination.py
backend/: CLAUDE.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a3d2e1f8b9c0_make_sites_npi_unique.py  a7c3e8d12f5b_add_ingest_runs_catalog.py  b5f2c3d4e6a1_revert_sites_npi_unique.py  b6c7d8e9f0a1_add_org_npi_to_sites.py  c1e4f2a8b3d5_add_raw_nppes_providers.py  c9f1a2b8e4d0_add_raw_hrsa_sites_ingest_run_id.py  d2f3a1e5b8c4_add_npi_match_candidates.py  d926f209ad04_init_schema_organizations_sites_raw_.py  e5f6a7b8c9d0_add_requires_review_to_npi_match_status.py  f1a2b3c4d5e6_add_reviewed_at_reviewed_by_to_npi_match_candidates.py  f4c3fd23a27b_add_bhcmis_org_id_to_organizations_and_.py
backend/app/: main.py
backend/app/api/v1/: organizations.py  router.py  schemas.py  sites.py
backend/app/core/: config.py
backend/app/db/: session.py  types.py
backend/app/models/: __init__.py  ingest_run.py  npi_match_candidate.py  organization.py  raw_hrsa_site.py  raw_nppes_provider.py  site.py
backend/app/routers/: review.py
backend/app/scripts/: bulk_accept_conflicts.py  bulk_accept_pending.py  ingest_hrsa_sites.py  ingest_nppes.py  match_nppes_sites.py  promote_npi_matches.py  transform_hrsa_sites.py  verify_hrsa_load.py
backend/app/services/: npi_promotion.py
backend/app/tests/integration/: conftest.py  test_api.py  test_ingest.py  test_transform.py
backend/app/tests/unit/: test_config.py  test_session.py  test_transform_helpers.py
docs/: api.md  database-v2-design.md  rebuild-runbook.md
medicbridges-frontend/: .env.example  fix_widths.py  index.html  package-lock.json  (+3 more)
(+102 files in other folders)
